<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">adapter.listview</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="about_title">Acerca de</string>
    <string name="profile_menu">Perfil</string>
    <string name="menu_share_luquea">Comparte</string>
    <string name="title_activity_luqea_show">Ver Luq</string>
    <string name="show_title">Producto</string>
    <string name="show_price">Precio</string>
    <string name="published_by">Publicado por</string>
    <string name="comment_this_luq">Comenta este Luq</string>
    <string name="add_comment_hint">Escriba aquí su comentario</string>
    <string name="publish_comment">Enviar Comentario</string>
    <string name="show_comments_title">Comentarios</string>
    <string name="loading">Cargando&#8230;</string> 
</resources>
