<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.luqea.androids"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1" >
       
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="300dp"
	        android:layout_margin="10dp"
	        android:layout_weight="1"
	        android:gravity="right" >

        <LinearLayout
            android:id="@+id/layoutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"                
                android:text="date" />

        </LinearLayout>
	        
	        
	        <ImageView
	            android:id="@+id/imgLuqea"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginTop="40dp"
	            android:adjustViewBounds="true"
	            android:gravity="top|center"
	            android:scaleType="fitCenter"
	            android:src="@drawable/ic_launcher"
	            />
	
	        <ImageView
	            android:id="@+id/imgShowProfile"
	            android:layout_width="50dp"
	            android:layout_height="50dp"
	            android:layout_marginLeft="15dp"
	            android:maxHeight="50dp"
	            android:maxWidth="50dp"
	            android:src="@drawable/ic_launcher"
	             />
	
	        <TextView
	            android:id="@+id/txtTitle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="14dp"
	            android:text="@string/show_title"
	            android:textSize="20dp"
	            android:textStyle="bold" />
	
	        <TextView
	            android:id="@+id/txtPrice"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_alignTop="@+id/imgLuqea"
	            android:background="@color/pressed_luqea"
	            android:padding="3dp"
	            android:text="@string/show_price"
	            android:textColor="@android:color/white"
	            android:textSize="20dp"
	            android:textStyle="bold" />
	
	    </RelativeLayout>


	    <FrameLayout 
	    	android:id="@+id/relativeLayout1" 
	    	android:layout_width="match_parent"
	    	android:layout_height="200dp" >  
	    	
	    	<fragment
	    	    android:id="@+id/show_map"
	    	    android:layout_width="match_parent"
	    	    android:layout_height="match_parent"
	    	    android:layout_margin="5dp"
	    	    android:layout_weight="1"
	    	    class="com.google.android.gms.maps.SupportMapFragment" />
            
		</FrameLayout >	  	    
	    	    	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dp" >
	
	        <TextView
	            android:id="@+id/txtLike"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:drawableLeft="@drawable/ic_like"
	            android:text="10" />
	
	        <TextView
	            android:id="@+id/txtDislike"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:drawableLeft="@drawable/ic_dislike"
	            android:text="10" />
	
	        <TextView
	            android:id="@+id/txtSpacer"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" />
	
	        <TextView
	            android:id="@+id/txtComments"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="right"
	            android:layout_marginLeft="10dp"
	            android:drawableLeft="@drawable/ic_comments"
	            android:gravity="right"
	            android:text="0" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/layoutProfileShowLuq"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#E5E5E5"
	        android:orientation="horizontal"
	        android:padding="5dp" >
	
	        <ImageView
	            android:id="@+id/imgPublisherProfile"
	            android:layout_width="50dp"
	            android:layout_height="50dp"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:adjustViewBounds="true"
	            android:gravity="top|center"
	            android:scaleType="fitCenter"
	            android:src="@drawable/ic_launcher"
	         />
	
	
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center|left"
	            android:orientation="vertical" >
	
	            <TextView
	                android:id="@+id/txtPublishedBy"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/published_by"
	                android:textAlignment="gravity" />
	
	            <TextView
	                android:id="@+id/txtPublisherName"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Nombre Apellido"
	                android:textAlignment="gravity"
	                android:textStyle="bold" />
	
	        </LinearLayout>
	
	        <TextView
	            android:id="@+id/txtShowProfileFollowStatus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
	            android:background="@color/pressed_luqea"
	            android:gravity="center"
	            android:padding="3dp"
	            android:text="Siguiendo"
	            android:textColor="@android:color/white"
	            android:textSize="20dp"
	            android:textStyle="bold"
	            android:visibility="invisible" />
	
	    </LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/txtCommentThisLuq"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:layout_marginLeft="10dp"
	            android:drawableLeft="@drawable/ic_comments"
			    android:drawablePadding="5dip"
	            android:text="@string/comment_this_luq"
	            android:gravity="left" />

	        <EditText
	            android:id="@+id/textComment"
	            android:layout_width="fill_parent"
	            android:layout_height="100dp"
	            android:ems="10"
	            android:hint="@string/add_comment_hint"
	            android:inputType="textMultiLine" >
	        </EditText>

	        <Button
	            android:id="@+id/buttonPublishComment"
	            style="?android:attr/buttonStyleSmall"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/publish_comment" />
	
	    </LinearLayout>	    
	    
		<TextView
		    android:id="@+id/txtCommentsTitle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="left"
		    android:layout_margin="10dp"
		    android:drawablePadding="5dip"
		    android:drawableRight="@drawable/ic_comments"
		    android:text="@string/show_comments_title"
		    android:textStyle="bold" />
	    
		<fragment
		    android:id="@+id/fragmentListComments"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_margin="5dp"
		    class="com.example.adapter.listview.CommentsListFragment"
		    tools:layout="@layout/fragment_comments_list" />
	    
	</LinearLayout>


	
</ScrollView>

	